2008-01-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/mqueuesendsupp.c: Remove warning.

2008-01-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/include/rtems/assoc.h: rtems_assoc_ptr_by_local should be
	in public API.

2008-01-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/include/rtems/score/object.h,
	score/src/objectextendinformation.c,
	score/src/objectinitializeinformation.c,
	score/src/objectshrinkinformation.c: Eliminate name_table since it is
	not used.

2008-01-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/objectnametoidstring.c: New file.

2008-01-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* itron/include/rtems/itron/object.h, itron/src/cre_tsk.c,
	libblock/src/show_bdbuf.c, libmisc/capture/capture-cli.c,
	libmisc/capture/capture.c, libmisc/monitor/mon-manager.c,
	libmisc/stackchk/check.c, posix/src/condinit.c,
	posix/src/keycreate.c, posix/src/mqueuecreatesupp.c,
	posix/src/mqueuedeletesupp.c, posix/src/mqueuenametoid.c,
	posix/src/mqueueopen.c, posix/src/mqueueunlink.c,
	posix/src/mutexinit.c, posix/src/pbarrierinit.c,
	posix/src/prwlockinit.c, posix/src/pspininit.c,
	posix/src/pthreadcreate.c, posix/src/pthreadexit.c,
	posix/src/semaphorecreatesupp.c, posix/src/semaphorenametoid.c,
	posix/src/timercreate.c, rtems/src/barrierident.c,
	rtems/src/dpmemident.c, rtems/src/msgqident.c, rtems/src/partident.c,
	rtems/src/ratemonident.c, rtems/src/regionident.c,
	rtems/src/semident.c, rtems/src/taskident.c, rtems/src/timerident.c,
	sapi/src/extensionident.c, score/Makefile.am,
	score/include/rtems/score/object.h,
	score/inline/rtems/score/object.inl, score/src/apimutexallocate.c,
	score/src/objectextendinformation.c,
	score/src/objectgetnameasstring.c, score/src/objectmp.c,
	score/src/objectnametoid.c: Convert the Objects_Name type from a
	simple type to a union of an unsigned 32 bit integer and a pointer.
	This should help eliminate weird casts between u32 and pointers in