@@ -64,7 +64,8 @@ typedef enum {
   INTERNAL_ERROR_BAD_STACK_HOOK,
   INTERNAL_ERROR_BAD_ATTRIBUTES,
   INTERNAL_ERROR_IMPLEMENTATION_KEY_CREATE_INCONSISTENCY,
-  INTERNAL_ERROR_IMPLEMENTATION_BLOCKING_OPERATION_CANCEL
+  INTERNAL_ERROR_IMPLEMENTATION_BLOCKING_OPERATION_CANCEL,
+  INTERNAL_ERROR_MUTEX_OBTAIN_FROM_BAD_STATE
 } Internal_errors_Core_list;
 
 /**
